WI-72 - Added Post module apis
